// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`KIOSK-007: ServicesScreen file longue + service fermé > KIOSK-007: service CLOSED → carte grisée avec horaire, non cliquable (snapshot 'en') 1`] = `
<main
  role="main"
  style="background-color: var(--surface-kiosk); min-height: 100vh; display: flex; flex-direction: column; padding: var(--space-8); gap: var(--space-6);"
>
  <header
    style="display: flex; align-items: center; gap: var(--space-4);"
  >
    <button
      data-testid="back-btn"
      style="font-size: 20px; color: var(--ink-inverse); background: none; cursor: pointer; padding: var(--space-2); min-width: 72px; min-height: 72px;"
    >
      <svg
        aria-hidden="true"
        data-icon="retour"
        fill="none"
        focusable="false"
        height="24"
        style="vertical-align: middle; margin-right: var(--space-2);"
        viewBox="0 0 24 24"
        width="24"
      >
        <g
          data-layer="duo"
          fill="currentColor"
          opacity="0.2"
          stroke="none"
        >
          <path
            d="M9 6v9l-4.5-4.5L9 6Z"
          />
        </g>
        <g
          data-layer="line"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        >
          <path
            d="M9 6l-4.5 4.5L9 15"
          />
          <path
            d="M4.5 10.5h10.7a4.6 4.6 0 0 1 0 9.2H9"
          />
        </g>
      </svg>
      Back
    </button>
    <span
      style="font-size: 28px; color: var(--ink-muted-inv); margin-left: auto;"
    >
      FR
    </span>
  </header>
  <h1
    style="font-family: var(--font-display); font-size: var(--text-2xl); font-weight: 700; letter-spacing: var(--tracking-tight); color: var(--ink-inverse); text-align: center; margin: 0px;"
  >
    Which service do you need?
  </h1>
  <div
    style="width: 100%; max-width: 960px; margin: 0px auto; display: flex; flex-direction: column; gap: var(--space-6); flex: 1 1 0%;"
  >
    <div
      style="display: grid; grid-template-columns: repeat(auto-fit, minmax(360px, 1fr)); gap: var(--space-6);"
    >
      <button
        aria-disabled="true"
        data-testid="service-card"
        style="min-height: 96px; background-color: var(--surface-1); border-radius: var(--r-lg); border: 1px solid var(--hairline); box-shadow: var(--shadow-1); cursor: not-allowed; display: flex; align-items: center; padding: var(--space-4) var(--space-6); gap: var(--space-6); opacity: 0.4; text-align: left;"
      >
        <span
          data-testid="service-icon"
          style="flex-shrink: 0; width: 72px; height: 72px; border-radius: var(--r-full); background-color: var(--brand-soft); color: var(--brand); display: flex; align-items: center; justify-content: center;"
        >
          <svg
            aria-hidden="true"
            data-icon="transfer"
            fill="none"
            focusable="false"
            height="40"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="40"
          >
            <g
              data-layer="duo"
              fill="currentColor"
              opacity="0.2"
              stroke="none"
            >
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="3"
                y="3.5"
              />
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="15.5"
                y="15"
              />
            </g>
            <g
              data-layer="line"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="3"
                y="3.5"
              />
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="15.5"
                y="15"
              />
              <path
                d="M11.5 6.25h9"
              />
              <path
                d="m17.5 3.25 3 3-3 3"
              />
              <path
                d="M12.5 17.75h-9"
              />
              <path
                d="m6.5 14.75-3 3 3 3"
              />
            </g>
          </svg>
        </span>
        <div
          style="display: flex; flex-direction: column; align-items: flex-start; gap: var(--space-2); flex: 1 1 0%; min-width: 0;"
        >
          <span
            data-testid="service-label"
            style="font-size: 28px; font-weight: 600; color: var(--action-label);"
          >
            Virement international
          </span>
          <span
            data-testid="service-schedule"
            style="font-size: 20px; color: var(--ink-soft); background-color: var(--surface-2); border-radius: var(--r-full); padding: var(--space-1) var(--space-3);"
          >
            Closed — lundi 08h00
          </span>
        </div>
      </button>
    </div>
  </div>
  <button
    data-testid="accessibility-btn"
    style="font-size: 24px; color: var(--ink-muted-inv); background: none; cursor: pointer; padding: var(--space-2); min-height: 72px; align-self: center; display: flex; align-items: center; gap: var(--space-3);"
  >
    <svg
      aria-hidden="true"
      data-icon="accessibilite"
      fill="none"
      focusable="false"
      height="28"
      stroke="currentColor"
      viewBox="0 0 24 24"
      width="28"
    >
      <g
        data-layer="duo"
        fill="currentColor"
        opacity="0.2"
        stroke="none"
      >
        <circle
          cx="12"
          cy="12"
          r="9"
        />
      </g>
      <g
        data-layer="line"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      >
        <circle
          cx="12"
          cy="12"
          r="9"
        />
        <circle
          cx="12"
          cy="6.9"
          r="1.2"
        />
        <path
          d="M7 10c3.3 1 6.7 1 10 0"
        />
        <path
          d="M12 10.8v3.6"
        />
        <path
          d="M12 14.4 9.4 19.2M12 14.4l2.6 4.8"
        />
      </g>
    </svg>
    Priority access
  </button>
</main>
`;

exports[`KIOSK-007: ServicesScreen file longue + service fermé > KIOSK-007: service CLOSED → carte grisée avec horaire, non cliquable (snapshot 'fr') 1`] = `
<main
  role="main"
  style="background-color: var(--surface-kiosk); min-height: 100vh; display: flex; flex-direction: column; padding: var(--space-8); gap: var(--space-6);"
>
  <header
    style="display: flex; align-items: center; gap: var(--space-4);"
  >
    <button
      data-testid="back-btn"
      style="font-size: 20px; color: var(--ink-inverse); background: none; cursor: pointer; padding: var(--space-2); min-width: 72px; min-height: 72px;"
    >
      <svg
        aria-hidden="true"
        data-icon="retour"
        fill="none"
        focusable="false"
        height="24"
        style="vertical-align: middle; margin-right: var(--space-2);"
        viewBox="0 0 24 24"
        width="24"
      >
        <g
          data-layer="duo"
          fill="currentColor"
          opacity="0.2"
          stroke="none"
        >
          <path
            d="M9 6v9l-4.5-4.5L9 6Z"
          />
        </g>
        <g
          data-layer="line"
          fill="none"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        >
          <path
            d="M9 6l-4.5 4.5L9 15"
          />
          <path
            d="M4.5 10.5h10.7a4.6 4.6 0 0 1 0 9.2H9"
          />
        </g>
      </svg>
      Retour
    </button>
    <span
      style="font-size: 28px; color: var(--ink-muted-inv); margin-left: auto;"
    >
      FR
    </span>
  </header>
  <h1
    style="font-family: var(--font-display); font-size: var(--text-2xl); font-weight: 700; letter-spacing: var(--tracking-tight); color: var(--ink-inverse); text-align: center; margin: 0px;"
  >
    Quel service souhaitez-vous ?
  </h1>
  <div
    style="width: 100%; max-width: 960px; margin: 0px auto; display: flex; flex-direction: column; gap: var(--space-6); flex: 1 1 0%;"
  >
    <div
      style="display: grid; grid-template-columns: repeat(auto-fit, minmax(360px, 1fr)); gap: var(--space-6);"
    >
      <button
        aria-disabled="true"
        data-testid="service-card"
        style="min-height: 96px; background-color: var(--surface-1); border-radius: var(--r-lg); border: 1px solid var(--hairline); box-shadow: var(--shadow-1); cursor: not-allowed; display: flex; align-items: center; padding: var(--space-4) var(--space-6); gap: var(--space-6); opacity: 0.4; text-align: left;"
      >
        <span
          data-testid="service-icon"
          style="flex-shrink: 0; width: 72px; height: 72px; border-radius: var(--r-full); background-color: var(--brand-soft); color: var(--brand); display: flex; align-items: center; justify-content: center;"
        >
          <svg
            aria-hidden="true"
            data-icon="transfer"
            fill="none"
            focusable="false"
            height="40"
            stroke="currentColor"
            viewBox="0 0 24 24"
            width="40"
          >
            <g
              data-layer="duo"
              fill="currentColor"
              opacity="0.2"
              stroke="none"
            >
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="3"
                y="3.5"
              />
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="15.5"
                y="15"
              />
            </g>
            <g
              data-layer="line"
              fill="none"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
            >
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="3"
                y="3.5"
              />
              <rect
                height="5.5"
                rx="1.5"
                width="5.5"
                x="15.5"
                y="15"
              />
              <path
                d="M11.5 6.25h9"
              />
              <path
                d="m17.5 3.25 3 3-3 3"
              />
              <path
                d="M12.5 17.75h-9"
              />
              <path
                d="m6.5 14.75-3 3 3 3"
              />
            </g>
          </svg>
        </span>
        <div
          style="display: flex; flex-direction: column; align-items: flex-start; gap: var(--space-2); flex: 1 1 0%; min-width: 0;"
        >
          <span
            data-testid="service-label"
            style="font-size: 28px; font-weight: 600; color: var(--action-label);"
          >
            Virement international
          </span>
          <span
            data-testid="service-schedule"
            style="font-size: 20px; color: var(--ink-soft); background-color: var(--surface-2); border-radius: var(--r-full); padding: var(--space-1) var(--space-3);"
          >
            Fermé — lundi 08h00
          </span>
        </div>
      </button>
    </div>
  </div>
  <button
    data-testid="accessibility-btn"
    style="font-size: 24px; color: var(--ink-muted-inv); background: none; cursor: pointer; padding: var(--space-2); min-height: 72px; align-self: center; display: flex; align-items: center; gap: var(--space-3);"
  >
    <svg
      aria-hidden="true"
      data-icon="accessibilite"
      fill="none"
      focusable="false"
      height="28"
      stroke="currentColor"
      viewBox="0 0 24 24"
      width="28"
    >
      <g
        data-layer="duo"
        fill="currentColor"
        opacity="0.2"
        stroke="none"
      >
        <circle
          cx="12"
          cy="12"
          r="9"
        />
      </g>
      <g
        data-layer="line"
        fill="none"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
      >
        <circle
          cx="12"
          cy="12"
          r="9"
        />
        <circle
          cx="12"
          cy="6.9"
          r="1.2"
        />
        <path
          d="M7 10c3.3 1 6.7 1 10 0"
        />
        <path
          d="M12 10.8v3.6"
        />
        <path
          d="M12 14.4 9.4 19.2M12 14.4l2.6 4.8"
        />
      </g>
    </svg>
    Accès prioritaire
  </button>
</main>
`;
